Shared: Components: Table: fix broken in safari

--- a/packages/shared/components/table/table-header/TableHeader.module.scss
+++ b/packages/shared/components/table/table-header/TableHeader.module.scss
@@ -26,8 +26,17 @@
  * International. See the License terms at http://creativecommons.org/licenses/by-sa/4.0/legalcode
  */
 
+:global(.rtl) {
+  :local(.tableHeader) {
+    right: unset;
+    left: 20px;
+  }
+}
+
 .tableHeader {
   position: fixed;
+  right: 20px;
+
   background: var(--background-color);
   display: grid;
   z-index: 1;
